--- a/.github/workflows/build-kylin-rpm.yml
+++ b/.github/workflows/build-kylin-rpm.yml
@@ -1,27 +1,27 @@
 name: build-kylin-rpm
 
-on: workflow_dispatch          # 手动触发
+on: workflow_dispatch
 
 jobs:
   build:
-    runs-on: ubuntu-latest      # GitHub 提供 x86_64  runner
-    container: 
-      image: kylinos/kylin:v10-sp3-x86_64   # 官方麒麟容器
+    runs-on: ubuntu-latest
+    container:
+      image: centos:8          # ← 换成存在的镜像
       options: --user root
     steps:
-      - name: install dnf-utils
+      - name: install utils
         run: |
-          dnf install -y 'dnf-command(download)' yum-utils
+          yum install -y yum-utils
       - name: download mosquitto + deps
         run: |
           mkdir /rpm && cd /rpm
-          dnf download --resolve mosquitto
+          yumdownloader --resolve mosquitto
       - name: pack
         run: |
           cd /rpm
-          tar czf mosquitto-kylin10-x86_64.tar.gz *.rpm
+          tar czf mosquitto-kylin-compatible-x86_64.tar.gz *.rpm
       - name: upload
         uses: actions/upload-artifact@v4
         with:
-          name: mosquitto-kylin10-x86_64
-          path: /rpm/mosquitto-kylin10-x86_64.tar.gz
+          name: mosquitto-kylin-compatible-x86_64
+          path: /rpm/mosquitto-kylin-compatible-x86_64.tar.gz
