Refactor repository creation in build workflow
Updated the script to create default repositories using mkdir and printf instead of a heredoc.

--- a/.github/workflows/build-kylin-arm64-rpm.yml
+++ b/.github/workflows/build-kylin-arm64-rpm.yml
@@ -9,43 +9,46 @@ jobs:
       image: rockylinux:9
       options: --user root --platform linux/arm64/v8
     steps:
-      # ① 创建 Rocky 9 默认源（最小镜像可能为空）
+      # ① 创建目录 + 写入默认源（printf 零转义）
       - name: create default repos
         run: |
-          cat >/etc/yum.repos.d/rocky.repo <<'EOF'
-          [baseos]
-          name=Rocky Linux 9 - BaseOS
-          baseurl=http://dl.rockylinux.org/vault/rocky/9/BaseOS/$basearch/os/
-          enabled=1
-          gpgcheck=0
-          [appstream]
-          name=Rocky Linux 9 - AppStream
-          baseurl=http://dl.rockylinux.org/vault/rocky/9/AppStream/$basearch/os/
-          enabled=1
-          gpgcheck=0
-          [crb]
-          name=Rocky Linux 9 - CRB
-          baseurl=http://dl.rockylinux.org/vault/rocky/9/CRB/$basearch/os/
-          enabled=1
-          gpgcheck=0
-          EOF
+          mkdir -p /etc/yum.repos.d
+          printf '%s\n' \
+          '[baseos]' \
+          'name=Rocky Linux 9 - BaseOS' \
+          'baseurl=http://dl.rockylinux.org/vault/rocky/9/BaseOS/$basearch/os/' \
+          'enabled=1' \
+          'gpgcheck=0' \
+          '' \
+          '[appstream]' \
+          'name=Rocky Linux 9 - AppStream' \
+          'baseurl=http://dl.rockylinux.org/vault/rocky/9/AppStream/$basearch/os/' \
+          'enabled=1' \
+          'gpgcheck=0' \
+          '' \
+          '[crb]' \
+          'name=Rocky Linux 9 - CRB' \
+          'baseurl=http://dl.rockylinux.org/vault/rocky/9/CRB/$basearch/os/' \
+          'enabled=1' \
+          'gpgcheck=0' \
+          > /etc/yum.repos.d/rocky.repo
 
-      # ② 启用 EPEL
+      # ② 装 epel
       - name: enable epel
         run: |
           dnf install -y epel-release
 
-      # ③ 安装下载器
+      # ③ 装下载器
       - name: install utils
         run: dnf install -y 'dnf-command(download)'
 
-      # ④ 抓包（含依赖）
+      # ④ 抓包
       - name: download mosquitto
         run: |
           mkdir /rpm && cd /rpm
           dnf download --resolve mosquitto
 
-      # ⑤ 打包 & 上传
+      # ⑤ 打包上传
       - name: pack
         run: |
           cd /rpm
