--- a/.github/workflows/KubeSphere341AllImages.yml
+++ b/.github/workflows/KubeSphere341AllImages.yml
@@ -1,4 +1,4 @@
-name: Build kubectl v1.23.17
+name: Build Missing Images
 on:
   workflow_dispatch:
 
@@ -15,9 +15,24 @@ jobs:
           registry: ghcr.io
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Build & Push
+      - name: Build & Push kubectl
         uses: docker/build-push-action@v4
         with:
           context: .
+          target: kubectl
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/kubectl:v1.23.17
+      - name: Build & Push kube-state-metrics (prom)
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          target: ksm-prom
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/kube-state-metrics:v2.3.0-prom
+      - name: Build & Push kube-state-metrics (quay)
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          target: ksm-quay
+          push: true
+          tags: ghcr.io/${{ github.repository_owner }}/kube-state-metrics:v2.3.0-quay
