--- a/.github/workflows/KubeSphere341AllImages.yml
+++ b/.github/workflows/KubeSphere341AllImages.yml
@@ -22,10 +22,10 @@ jobs:
           target: kubectl
           push: true
           tags: ghcr.io/${{ github.repository_owner }}/kubectl:v1.23.17
-      - name: Build & Push kube-state-metrics (nju)
+      - name: Build & Push kube-state-metrics
         uses: docker/build-push-action@v4
         with:
           context: .
-          target: ksm-nju
+          target: ksm
           push: true
-          tags: ghcr.io/${{ github.repository_owner }}/kube-state-metrics:v2.3.0-nju
+          tags: ghcr.io/${{ github.repository_owner }}/kube-state-metrics:v2.3.0
